--- a/.gitmodules
+++ b/.gitmodules
@@ -61,6 +61,7 @@
 [submodule "bundle/viewdoc"]
 	path = bundle/viewdoc
 	url = https://github.com/powerman/vim-plugin-viewdoc.git
+    ignore = dirty
 [submodule "bundle/vim-lfe"]
 	path = bundle/vim-lfe
 	url = https://github.com/lfex/vim-lfe
