Add rust.vim and vim-gitgutter. Change font

--- a/.gitmodules
+++ b/.gitmodules
@@ -71,3 +71,9 @@
 [submodule "bundle/vim-elixir"]
 	path = bundle/vim-elixir
 	url = git@github.com:elixir-lang/vim-elixir.git
+[submodule "bundle/vim-gitgutter.git"]
+	path = bundle/vim-gitgutter.git
+	url = git@github.com:airblade/vim-gitgutter.git
+[submodule "bundle/rust.vim"]
+	path = bundle/rust.vim
+	url = git@github.com:rust-lang/rust.vim.git
