--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "bundle/taboo.vim"]
 	path = bundle/taboo.vim
 	url = https://github.com/gcmt/taboo.vim.git
+[submodule "bundle/alchemist.vim"]
+	path = bundle/alchemist.vim
+	url = https://github.com/slashmili/alchemist.vim.git
