--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,4 @@
 [submodule "bundle/alchemist.vim"]
 	path = bundle/alchemist.vim
 	url = https://github.com/slashmili/alchemist.vim.git
+    ignore = dirty
