--- a/.gitmodules
+++ b/.gitmodules
@@ -1,14 +1,6 @@
-[submodule "bundle/nerdtree"]
-	path = bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
-    ignore = dirty
 [submodule "bundle/vim-colors-solarized"]
 	path = bundle/vim-colors-solarized
-	url = git://github.com/altercation/vim-colors-solarized.git
-    ignore = dirty
-[submodule "bundle/nerdcommenter"]
-	path = bundle/nerdcommenter
-	url = git://github.com/scrooloose/nerdcommenter.git
+	url = https://github.com/altercation/vim-colors-solarized.git
     ignore = dirty
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
@@ -68,3 +60,9 @@
 	path = bundle/vim-erlang-skeletons
 	url = https://github.com/vim-erlang/vim-erlang-skeletons.git
     ignore = dirty
+[submodule "bundle/nerdtree"]
+	path = bundle/nerdtree
+	url = https://github.com/preservim/nerdtree.git
+[submodule "bundle/nerdcommenter"]
+	path = bundle/nerdcommenter
+	url = https://github.com/preservim/nerdcommenter.git
