--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,9 @@
 set -g mouse on
 set -g default-terminal "screen-256color"
-unbind r
-bind r source-file ~/.tmux.conf; display "Reloaded"
+#unbind r
+#bind r source-file ~/.tmux.conf; display "Reloaded"
 set -g base-index 1
 setw -g pane-base-index 1
 set -g status-position top
 set -g status-right '%a %Y-%m-%d %H:%M'
-set status-style "bg=colour12 fg=colour230"
+#set status-style "bg=colour12 fg=colour230"
