Use tmux package manager and vim package manager

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,33 @@
+set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
-set -g default-terminal "screen-256color"
-#unbind r
-#bind r source-file ~/.tmux.conf; display "Reloaded"
+
 set -g base-index 1
-setw -g pane-base-index 1
-set -g status-position top
-set -g status-right '%a %Y-%m-%d %H:%M'
-#set status-style "bg=colour12 fg=colour230"
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'seebi/tmux-colors-solarized'
+
+run '~/.tmux/plugins/tpm/tpm'
+
+set -g @colors-solarized 'light'
+
+set-window-option -g mode-keys vi
+
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+#bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+set -s copy-command 'pbcopy'
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
